# cognitive-ability-benchmark

./: .gitignore  README.md  benchmark.yaml  pyproject.toml  requirements.txt
benchmark/: __init__.py  base.py  cogniflex_suite.py
benchmark/adapters/: __init__.py  kaggle_benchmarks_adapter.py
benchmark/evaluation/: __init__.py  metrics.py  pilot_sweep.py  secure_evaluator.py
benchmark/tasks/: __init__.py  attention.py  base_task.py  conflict_planning.py  executive_functions.py  habit_override.py  learning.py  metacognition.py  rule_shift.py  social_cognition.py
benchmark/utils/: __init__.py  data_utils.py  generator.py
cognitive_ability_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: kaggle_adapter.json  pilot_sweep.json
kaggle_assets/: benchmark_metadata.json
kaggle_assets/data/: conflict_planning.jsonl  habit_override.jsonl  rule_shift.jsonl
kaggle_assets/notebooks/: cogniflex_task.py
outputs/: aibom.json  pilot_sweep_difficulty_summary.csv  pilot_sweep_overall.csv  pilot_sweep_predictions.jsonl  pilot_sweep_report.md  pilot_sweep_task_summary.csv
scripts/: export_kaggle_assets.py  export_private_answer_bundle.py  run_pilot_sweep.py  score_submission.py
tests/: __init__.py  test_generators.py  test_kaggle_adapter.py  test_pilot_sweep.py  test_secure_evaluator.py  test_tasks.py
