[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-ability-benchmark"
version = "0.1.0"
description = "A comprehensive benchmark for evaluating cognitive abilities in AI models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kudosscience" }]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark*"]
